# libunique

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  index.html  params.json  project.config  unique.doap  unique.pc.in
doc/: Makefile.in
doc/reference/: .gitignore  Makefile.am  Makefile.in  unique-docs.sgml  unique-docs.xml  unique-sections.txt
po/: .gitignore
tests/: .gitignore  Makefile.am  Makefile.in  test-unique.c
unique/: .gitignore  Makefile.am  Makefile.in  unique.h  uniqueapp.c  uniqueapp.h  uniquebackend.c  uniquebackend.h  uniqueenumtypes.c.in  uniqueinternals.h  uniquemarshal.list  uniquemessage.c  uniquemessage.h  uniqueversion.h.in
unique/bacon/: .gitignore  Makefile.am  Makefile.in  uniquebackend-bacon.c  uniquebackend-bacon.h  uniquefactory-bacon.c  uniquefactory-bacon.h  uniquemessage-bacon.c  uniquemessage-bacon.h
unique/dbus/: .gitignore  Makefile.am  Makefile.in  uniquebackend-bindings.h  uniquebackend-dbus.c  uniquebackend-dbus.h  uniquebackend-dbus.xml  uniquefactory-dbus.c  uniquefactory-dbus.h
unique/gdbus/: .gitignore  Makefile.am
unique/x11/: .gitignore  Makefile.am  uniquebackend-x11.c  uniquebackend-x11.h
